--- a/my-project/index.html
+++ b/my-project/index.html
@@ -1,14 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/images/profile-picture.jpg" class="rounded-lg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Daniel Simanjuntak</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml"
+    href="https://cdn.discordapp.com/attachments/1170517472307314719/1170579212726452264/IMAG0005_2.jpg?ex=65598dd8&is=654718d8&hm=5fbbdd20aba1d53c830e08f134b2bf1c8608a5aacb438231f10faae42d3649f2&"
+    class="rounded-lg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Daniel Simanjuntak</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+  <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+</body>
+
 </html>
